tests/sumo/errors/routes/stops/until_order/vehroutes.sumo.meso
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2022-04-02 15:27:56 by Eclipse SUMO sumo Version v1_12_0+1866-fd84196f622
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
This file may also be made available under the following Secondary
Licenses when the conditions for such availability set forth in the Eclipse
Public License 2.0 are satisfied: GNU General Public License, version 2
or later which is available at
https://www.gnu.org/licenses/old-licenses/gpl-2.0-standalone.html
SPDX-License-Identifier: EPL-2.0 OR GPL-2.0-or-later
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <route-files value="input_routes.rou.xml"/>
    </input>

    <output>
        <write-license value="true"/>
        <vehroute-output value="vehroutes.xml"/>
    </output>

    <processing>
        <default.speeddev value="0"/>
        <pedestrian.model value="nonInteracting"/>
    </processing>

    <report>
        <xml-validation value="never"/>
        <xml-validation.routes value="never"/>
        <duration-log.disable value="true"/>
        <no-step-log value="true"/>
    </report>

    <mesoscopic>
        <mesosim value="true"/>
    </mesoscopic>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
    <vehicle id="until_unordered" depart="1.00" arrival="86.00">
        <route edges="beg end"/>
        <stop lane="beg_0" endPos="6.00" until="50.00"/>
        <stop lane="end_0" endPos="4.00" until="40.00"/>
    </vehicle>

    <vehicle id="arrival_unordered" depart="1.00" arrival="92.00">
        <route edges="beg end"/>
        <stop lane="beg_0" endPos="6.00" arrival="50.00" duration="5.00"/>
        <stop lane="end_0" endPos="4.00" arrival="40.00" duration="5.00"/>
    </vehicle>

    <vehicle id="until_arrival_unordered" depart="1.00" arrival="92.00">
        <route edges="beg end"/>
        <stop lane="beg_0" endPos="6.00" until="50.00"/>
        <stop lane="end_0" endPos="4.00" arrival="40.00" until="60.00"/>
    </vehicle>

    <vehicle id="until_before_arrival" depart="1.00" arrival="93.00">
        <route edges="beg end"/>
        <stop lane="beg_0" endPos="6.00" arrival="60.00" until="50.00"/>
    </vehicle>

    <vehicle id="until_before_depart" depart="60.00" arrival="96.00">
        <route edges="beg end"/>
        <stop lane="beg_0" endPos="6.00" until="50.00"/>
    </vehicle>

    <vehicle id="arrival_before_depart" depart="60.00" arrival="101.00">
        <route edges="beg end"/>
        <stop lane="beg_0" endPos="6.00" arrival="40.00" duration="5.00"/>
    </vehicle>

</routes>
